[fix] CodeRabbit 3차 리뷰 반영